--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1500,7 +1500,7 @@
 % \end{verbatim}
 %
 % If you do not know the year of publication, the style will add
-% ``[n.d.]'' (for ``no date'') to the entry.
+% ``[n.\,d.]'' (for ``no date'') to the entry.
 %
 % If you do not know the author (this is often the case for online
 % entries), use the |key| field to add a key for sorting and citations,
