--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -309,15 +309,17 @@ Frequently-used parameters, or combinations of parameters, include:
 
 This document uses the following string as the first command in the
 source file:
-%<manuscript>\verb|\documentclass[manuscript,screen]{acmart}|.
-%<acmsmall|acmsmall-conf>\verb|\documentclass[acmsmall]{acmart}|.
-%<acmlarge>\verb|\documentclass[acmlarge]{acmart}|.
-%<acmtog>\verb|\documentclass[acmtog]{acmart}|.
-%<sigconf>\verb|\documentclass[sigconf]{acmart}|.
-%<authordraft>\verb|\documentclass[sigconf,authordraft]{acmart}|.
-%<sigplan>\verb|\documentclass[sigplan,screen]{acmart}|.
-%<sigchi>\verb|\documentclass[sigchi]{acmart}|.
-%<sigchi-a>\verb|\documentclass[sigchi-a]{acmart}|.
+\begin{verbatim}
+%<manuscript>\documentclass[manuscript,screen]{acmart}
+%<acmsmall|acmsmall-conf>\documentclass[acmsmall]{acmart}
+%<acmlarge>\documentclass[acmlarge]{acmart}
+%<acmtog>\documentclass[acmtog]{acmart}
+%<sigconf>\documentclass[sigconf]{acmart}
+%<authordraft>\documentclass[sigconf,authordraft]{acmart}
+%<sigplan>\documentclass[sigplan,screen]{acmart}
+%<sigchi>\documentclass[sigchi]{acmart}
+%<sigchi-a>\documentclass[sigchi-a]{acmart}
+\end{verbatim}
 
 
 \section{Modifications}
