--- a/README
+++ b/README
@@ -219,3 +219,5 @@ Version 1.58    Suppressed spurious warnings.
 Version 1.59    Now a journal format can be used for conference proceedings
 		All samples are now generated from the same .dtx file
 		Bug fixes
+
+version 1.60    New option: urlbreakonhyphens (thanks to Peter Kemp)
