--- a/README
+++ b/README
@@ -221,3 +221,4 @@ Version 1.59    Now a journal format can be used for conference proceedings
 		Bug fixes
 
 version 1.60    New option: urlbreakonhyphens (thanks to Peter Kemp)
+		Smaller header size for acmsmall
