--- a/acmart.dtx
+++ b/acmart.dtx
@@ -354,7 +354,8 @@
 % The option |balance| determines whether the last page in the two
 % column mode has balanced columns.  By default it is |true|; however,
 % it may lead to problems for some documents.  Set it to |false| if
-% you encounter compilation errors.
+% you encounter compilation errors.  Note that for one page documents
+% \cs{balance} command might cause problems.
 %
 % The option |urlbreakonhyphens| determines whether URLs can be split
 % between lines after hyphens.  By default it is true.  Set it to
