New bibtex types

--- a/README
+++ b/README
@@ -224,3 +224,5 @@ version 1.60    New option: urlbreakonhyphens (thanks to Peter Kemp)
 		Smaller header size for acmsmall
 
 Version 1.61    Bug fixes
+                New bibtex types for artifacts
+		
