--- a/samples/sample-base.bib
+++ b/samples/sample-base.bib
@@ -1,22 +1,3 @@
-%%% ====================================================================
-%%%  BibTeX-file{
-%%%     author          = "Gerry Murray",
-%%%     version         = "1.2",
-%%%     date            = "2 April 2012",
-%%%     filename        = "acmsmall-sample-bibfile.bib",
-%%%     address         = "ACM, NY",
-%%%     email           = "murray at hq.acm.org",
-%%%     codetable       = "ISO/ASCII",
-%%%     keywords        = "ACM Reference Format, bibliography, citation, references",
-%%%     supported       = "yes",
-%%%     docstring       = "This BibTeX database file contains 'bibdata' entries
-%%%                        that 'match' the examples provided in the Specifications Document
-%%%                        AND, also, 'legacy'-type bibs. It should assist authors in
-%%%                        choosing the 'correct' at-bibtype and necessary bib-fields
-%%%                        so as to obtain the appropriate ACM Reference Format output.
-%%%                        It also contains many 'Standard Abbreviations'. "
-%%%  }
-%%% ====================================================================
 
 % Journals
 
@@ -1620,4 +1601,22 @@ pages = "24--31"}
   month =        {April},
   year =         2015,
   note =         {\url{http://www.ctan.org/pkg/amsthm}}
+}
+
+@ArtifactSoftware{R,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2019},
+    url = {https://www.R-project.org/},
+}
+
+@ArtifactDataset{UMassCitations,
+ author    =  {Sam Anzaroot and Andrew McCallum},
+ title     =  {{UMass} Citation Field Extraction Dataset},
+ year      = 2013,
+ url       =
+    {http://www.iesl.cs.umass.edu/data/data-umasscitationfield},
+ lastaccessed = {May 27, 2019}
 }
