--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -644,7 +644,8 @@ command in the {\bfseries preamble} (before
   multi-volume works as books \cite{MR781536} and \cite{MR781537}. A
   couple of citations with DOIs:
   \cite{2004:ITE:1009386.1010128,Kirschmer:2010:AEI:1958016.1958018}. Online
-  citations: \cite{TUGInstmem, Thornburg01, CTANacmart}.
+  citations: \cite{TUGInstmem, Thornburg01, CTANacmart}. Artifacts:
+  \cite{R} and \cite{UMassCitations}.
 
 \section{Acknowledgments}
 
