--- a/acmart.dtx
+++ b/acmart.dtx
@@ -952,7 +952,8 @@
 % \verb|\setcopyright{...}| is introduced.  Its argument is the
 % copyright status of the paper, for example,
 % \verb|\setcopyright{acmcopyright}|.  The possible values for this
-% command are listed in Table~\ref{tab:setcopyright}.
+% command are listed in Table~\ref{tab:setcopyright}.  This command
+% must be placed in the preamble, before |\begin{document}.  
 %
 % \begin{table}
 %   \centering
@@ -1818,7 +1819,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2019/05/27 v1.61 Typesetting articles for the Association for
+[2019/06/01 v1.62 Typesetting articles for the Association for
 Computing Machinery]
 %    \end{macrocode}
 %
