--- a/README
+++ b/README
@@ -225,4 +225,5 @@ version 1.60    New option: urlbreakonhyphens (thanks to Peter Kemp)
 
 Version 1.61    Bug fixes
                 New bibtex types for artifacts
-		
+
+Version 1.62    Documentation update
