Commented out spurious \label. Fixes #356.

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -397,7 +397,7 @@
 %
 %
 %\subsection{Top matter}
-\label{sec:ug_topmatter}
+%\label{sec:ug_topmatter}
 %
 % A number of commands set up \emph{top matter} or (in
 % computer science jargon) \emph{metadata} for an article.  They
