New journal: TELO

--- a/README
+++ b/README
@@ -227,3 +227,6 @@ Version 1.61    Bug fixes
                 New bibtex types for artifacts
 
 Version 1.62    Documentation update
+		New journal: TELO
+		Bug fixes
+		
