--- a/README
+++ b/README
@@ -229,4 +229,5 @@ Version 1.61    Bug fixes
 Version 1.62    Documentation update
 		New journal: TELO
 		Bug fixes
-		
+
+Version 1.63	New journals: TQUANT, FACMP
