--- a/README
+++ b/README
@@ -231,3 +231,5 @@ Version 1.62    Documentation update
 		Bug fixes
 
 Version 1.63	New journals: TQUANT, FACMP
+
+Version 1.63a   Moved TQUANT to TQC
