--- a/acmart.dtx
+++ b/acmart.dtx
@@ -294,7 +294,7 @@
 %            TOCE, TOCHI, TOCL,
 %            TOCS, TOCT, TODAES, TODS, TOIS, TOIT, TOMACS, TOMM (formerly
 %            TOMCCAP), TOMPECS, TOMS, TOPC, TOPLAS, TOPS,
-%            TOS, TOSEM, TOSN, TQUANT, TRETS,
+%            TOS, TOSEM, TOSN, TQC, TRETS,
 %            TSAS, TSC, TSLP and TWEB, including special issues. \\
 %   acmlarge  & Large single-column format.  Used for
 %           IMWUT, JOCCH, POMACS and TAP, including special issues. \\
@@ -1789,7 +1789,7 @@
 %     TOS & ACM Transactions on Storage\\
 %     TOSEM & ACM Transactions on Software Engineering and Methodology\\
 %     TOSN & ACM Transactions on Sensor Networks\\
-%     TQUANT & ACM Transactions on Quantum Computing\\
+%     TQC & ACM Transactions on Quantum Computing\\
 %     TRETS & ACM Transactions on Reconfigurable Technology and Systems\\
 %     TSAS & ACM Transactions on Spatial Algorithms and Systems\\
 %     TSC & ACM Transactions on Social Computing\\
@@ -1825,7 +1825,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2019/08/04 v1.63 Typesetting articles for the Association for Computing Machinery]
+[2019/08/05 v1.63a Typesetting articles for the Association for Computing Machinery]
 %    \end{macrocode}
 %
 % \changes{v1.00}{2016/04/14}{First released version}
@@ -1917,6 +1917,7 @@
 % \changes{1.62}{2019/07/31}{New journal: TELO}
 % \changes{1.63}{2019/08/04}{New journal: TQUANT}
 % \changes{1.63}{2019/08/04}{New journal: FACMP} 
+% \changes{1.63a}{2019/08/05}{Move: TQUANT to TQC}
 %
 % And the driver code:
 %    \begin{macrocode}
@@ -3529,7 +3530,7 @@
   TOS,%
   TOSEM,%
   TOSN,%
-  TQUANT,%
+  TQC,%
   TRETS,%
   TSAS,%
   TSC,%
@@ -3752,7 +3753,7 @@
   \def\@journalName{ACM Transactions on Sensor Networks}%
   \def\@journalNameShort{ACM Trans. Sensor Netw.}%
   \def\@permissionCodeOne{1550-4859}%
-\or % TQUANT
+\or % TQC
   \def\@journalName{ACM Transactions on Quantum Computing}%
   \def\@journalNameShort{ACM Trans. Quantum Comput.}%
   \def\@permissionCodeOne{2643-6817}%
