Typo corrected (thanks to Lawrence Christopher Angrave)

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -100,6 +100,7 @@
 %  I am grateful to
 %  Michael D.~Adams,
 %  Leif Andersen,
+%  Lawrence Christopher Angrave,
 %  Dirk Beyer,
 %  Joachim Breitner,
 %  Benjamin Byholm,
@@ -1664,7 +1665,7 @@
 % warning.
 %
 % You cannot change \cs{baselinestretch} in your document: this
-% produces an erorr.
+% produces an error.
 %
 % You should not abuse the command \cs{vspace}:  this command may
 % disturb the typesetting of ACM papers.
